--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <title>RSA US</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
